# AgentX

./: README.md  business-model.md  demo-script.md  demo-walkthrough.md  future-roadmap.md  index.html  package-lock.json  package.json  technical-architecture.md
rust-blockchain/: Cargo.toml  README.md
rust-blockchain/src/: blockchain.rs  config.rs  db.rs  error.rs  main.rs  utils.rs  wallet.rs
rust-blockchain/src/api/: auth.rs  middleware.rs  mod.rs  positions.rs  protocols.rs  transactions.rs  users.rs
rust-blockchain/src/elizaos/: mod.rs  protocol_adapter.rs  transaction_manager.rs  yield_optimizer.rs
rust-blockchain/src/models/: mod.rs  pool.rs  position.rs  protocol.rs  transaction.rs  user.rs
rust-blockchain/src/services/: auth_service.rs  mod.rs  position_service.rs  protocol_service.rs  transaction_service.rs  user_service.rs  yield_optimizer_service.rs
rust-blockchain/src/smart_contracts/: ashswap.rs  hatom_protocol.rs  maiar_exchange.rs  mod.rs  protocol_interface.rs
src/: App.tsx  index.html
src/components/: AgentChat.tsx  AssetCard.tsx  BlockchainStatus.tsx  ConnectWalletModal.tsx  CreatePositionModal.tsx  DepositModal.tsx  Footer.tsx  Navbar.tsx  PerformanceChart.tsx  PoolCard.tsx  PositionCard.tsx  ProtocolCard.tsx  ProtocolOverview.tsx  ProtocolSelector.tsx  StatsCard.tsx  StrategySelector.tsx  TopPoolsTable.tsx  TransactionHistory.tsx  WithdrawModal.tsx
src/context/: AuthContext.tsx  ProtocolContext.tsx
src/data/: assets.ts  performance.ts  pools.ts  positions.ts  protocols.ts
src/pages/: Assets.tsx  ChatPage.tsx  Dashboard.tsx  (+3 more)
(+8 files in other folders)
