[package]
name = "agentx-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["AgentX Team <team@agentx.finance>"]
description = "Blockchain integration layer for AgentX yield optimization platform"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.26", features = ["json"] }
async-trait = "0.1.77"
thiserror = "1.0.57"
hex = "0.4.3"
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.2"
clap = { version = "4.5.3", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.35"
futures = "0.3.30"
base64 = "0.22.0"
bip39 = "2.0.0"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
warp = "0.3.6"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
config = "0.14.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }